[package]
name = "pest-typed-tree"
version = "0.1.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
pest_meta = "2.1.2"
syn = {version = "1.0.8", features = ["extra-traits"]}
quote = "1.0.2"
heck = "0.3.1"
proc-macro2 = "1.0.6"

[dev-dependencies]
pest_derive = "2.1.0"
pest = "2.1.2"
